Fix overflowing addresses

--- a/src/assets/css/main.sass
+++ b/src/assets/css/main.sass
@@ -50,6 +50,12 @@ p
   @media screen and (max-width: 370px)
     font-size: 14px
 
+a
+  color: #6fa4d7
+
+a:hover
+  text-decoration: none
+
 *
   outline: 0
 
@@ -305,3 +311,7 @@ input[type="text"]
 .donation-icons
   width: 110px
   height: 150px
+
+.address
+  white-space: nowrap
+  overflow: scroll
